2005-05-11  Nathaniel Smith  <njs@codesourcery.com>

	* work.cc (build_deletions): Disable delete_dir.

2005-05-11  Matthew Gregan  <kinetik@orcon.net.nz>

	* constants.cc (constants::bufsz): Increase buffer size.  Reduces
	the runtime to tests/t_netsync_largish_file.at by four to seven
	times on my test machines.

2005-05-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* revision.cc: Make expand_{ancestors,dominators} twice as fast.
	Loop over revisions in the other direction so that changes at the
	frontier propogate fully in 1 pass, instead of one level at a time.

2005-05-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* packet.{cc,hh}: Give packet_consumer and children a callback to call
	after writing out a revision.
	* netsync.cc: Use this callback to add a "revisions written" ticker,
	to provide user feedback while sanity checking.

2005-05-10  Timothy Brownawell  <tbrownaw@gmail.com>

	* ui.cc: Make tick_write_count take less horizontal space

2005-05-09  Nathaniel Smith  <njs@codesourcery.com>

	* AUTHORS: Give Riccardo his real name.
	* ChangeLog: Likewise.

2005-05-09  Riccardo Ghetta <birrachiara@tin.it>
	
	* std_hooks.lua: Support kdiff3.

2005-05-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* lua.cc (loadstring, run_string): New parameter to identify the
	source of the Lua string being loaded.
	(add_{std,test}_hooks, load_rcfile): Pass an identity through.

2005-05-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* monotone.cc: Absolutify and tilde expand pid file.

2005-05-09  Matthew Gregan  <kinetik@orcon.net.nz>

	* testsuite.at: Revert bogus changes committed in revision 9d478.

2005-05-09  Matt Johnston  <matt@ucc.asn.au>

	* commands.cc (pid_file): use fs::path .empty() rather than ==, since
	boost 1.31 doesn't seem to have the latter.

2005-05-08  Matthew Gregan  <kinetik@orcon.net.nz>

	* lua.cc (report_error, load{file,string}): New member functions.
	Error handling in call moved into report_error.
	(call): Call report_error.