@@ -1,3 +1,8 @@
+2005-05-13  Jon Bright  <jon@siliconcircus.com>
+	* testsuite.at (UNGZ): Change the way the ungzipping works on
+	Win32, in the hope that test 206 will no longer be given invalid
+	files.
+
 2005-05-11  Nathaniel Smith  <njs@codesourcery.com>
 
 	* work.cc (build_deletions): Disable delete_dir.
